--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,7 +105,7 @@
     "gatsby-node.ts",
     "./gatsby-config.ts",
     "./plugins/**/*",
-    "webpack.config.js",
+    "webpack.config.ts",
     "static"
   ]
 }
